@@ -7,6 +7,7 @@ version <next>:
 - RealVideo 6.0 decoder
 - OpenMAX encoders deprecated
 - libx265 alpha layer encoding
+- ADPCM IMA Xbox decoder
 
 version 7.1:
 - Raw Captions with Time (RCWT) closed caption demuxer
